<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_course_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:alpha="0.7"
            android:background="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_class_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/selector_button"
                        android:text="删除" />
                    <View
                        android:id="@+id/view_space"
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layerType="software" />
                    <Button
                        android:id="@+id/btn_edit"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/selector_button"
                        android:text="@string/edit_course_btn" />
                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape_line"
                    android:layerType="software" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/classroom"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_class_room"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_view_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/week_of_term"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_week_of_term"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_view_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/classLength"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_class_num"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_view_color"
                        android:textSize="16sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/teacher"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_teacher"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_view_color"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_drawable"
            android:text="保存"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>
